--- a/env/ORION.env
+++ b/env/ORION.env
@@ -52,7 +52,7 @@ elif [ $step = "waveinit" -o $step = "waveprep" -o $step = "wavepostsbs" -o $ste
     export wavempexec=${launcher}
     export wave_mpmd=${mpmd}
 
-elif [ $step = "atmanalrun" ]; then
+elif [ "${step}" = "atmanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -61,10 +61,10 @@ elif [ $step = "atmanalrun" ]; then
     nth_max=$(($npe_node_max / $npe_node_atmanalrun))
 
     export NTHREADS_ATMANAL=${nth_atmanalrun:-$nth_max}
-    [[ $NTHREADS_ATMANAL -gt $nth_max ]] && export NTHREADS_ATMANAL=$nth_max
+    [[ $NTHREADS_ATMANAL -gt ${nth_max} ]] && export NTHREADS_ATMANAL=${nth_max}
     export APRUN_ATMANAL="$launcher -n $npe_atmanalrun"
 
-elif [ $step = "atmensanalrun" ]; then
+elif [ "${step}" = "atmensanalrun" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -73,17 +73,17 @@ elif [ $step = "atmensanalrun" ]; then
     nth_max=$(($npe_node_max / $npe_node_atmensanalrun))
 
     export NTHREADS_ATMENSANAL=${nth_atmensanalrun:-$nth_max}
-    [[ $NTHREADS_ATMENSANAL -gt $nth_max ]] && export NTHREADS_ATMENSANAL=$nth_max
+    [[ $NTHREADS_ATMENSANAL -gt ${nth_max} ]] && export NTHREADS_ATMENSANAL=${nth_max}
     export APRUN_ATMENSANAL="$launcher -n $npe_atmensanalrun"
 
-elif [ $step = "aeroanlrun" ]; then
+elif [ "${step}" = "aeroanlrun" ]; then
 
     export APRUNCFP="$launcher -n \$ncmd --multi-prog"
 
     nth_max=$(($npe_node_max / $npe_node_aeroanlrun))
 
     export NTHREADS_AEROANL=${nth_aeroanlrun:-$nth_max}
-    [[ $NTHREADS_AEROANL -gt $nth_max ]] && export NTHREADS_AEROANL=$nth_max
+    [[ $NTHREADS_AEROANL -gt ${nth_max} ]] && export NTHREADS_AEROANL=${nth_max}
     export APRUN_AEROANL="$launcher -n $npe_aeroanlrun"
 
 elif [ $step = "anal" -o $step = "analcalc" ]; then
@@ -98,11 +98,11 @@ elif [ $step = "anal" -o $step = "analcalc" ]; then
     nth_max=$(($npe_node_max / $npe_node_anal))
 
     export NTHREADS_GSI=${nth_anal:-$nth_max}
-    [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
+    [[ $NTHREADS_GSI -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
     export APRUN_GSI="$launcher"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
-    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
+    [[ $NTHREADS_CALCINC -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="$launcher"
 
     export NTHREADS_CYCLE=${nth_cycle:-12}
@@ -114,7 +114,7 @@ elif [ $step = "anal" -o $step = "analcalc" ]; then
     npe_gausfcanl=${npe_gausfcanl:-1}
     export APRUN_GAUSFCANL="$launcher -n $npe_gausfcanl"
 
-elif [ $step = "sfcanl" ]; then
+elif [ "${step}" = "sfcanl" ]; then
     nth_max=$(($npe_node_max / $npe_node_sfcanl))
 
     export NTHREADS_CYCLE=${nth_sfcanl:-14}
@@ -122,18 +122,18 @@ elif [ $step = "sfcanl" ]; then
     npe_sfcanl=${ntiles:-6}
     export APRUN_CYCLE="$launcher -n $npe_sfcanl"
 
-elif [ $step = "gldas" ]; then
+elif [ "${step}" = "gldas" ]; then
 
     export USE_CFP="NO"
 
     nth_max=$(($npe_node_max / $npe_node_gldas))
 
     export NTHREADS_GLDAS=${nth_gldas:-$nth_max}
-    [[ $NTHREADS_GLDAS -gt $nth_max ]] && export NTHREADS_GLDAS=$nth_max
+    [[ $NTHREADS_GLDAS -gt ${nth_max} ]] && export NTHREADS_GLDAS=${nth_max}
     export APRUN_GLDAS="$launcher -n $npe_gldas"
 
     export NTHREADS_GAUSSIAN=${nth_gaussian:-1}
-    [[ $NTHREADS_GAUSSIAN -gt $nth_max ]] && export NTHREADS_GAUSSIAN=$nth_max
+    [[ $NTHREADS_GAUSSIAN -gt ${nth_max} ]] && export NTHREADS_GAUSSIAN=${nth_max}
     export APRUN_GAUSSIAN="$launcher -n $npe_gaussian"
 
 # Must run data processing with exactly the number of tasks as time
@@ -142,7 +142,7 @@ elif [ $step = "gldas" ]; then
     npe_gldas_data_proc=$(($gldas_spinup_hours + 12))
     export APRUN_GLDAS_DATA_PROC="$launcher -n $npe_gldas_data_proc --multi-prog"
 
-elif [ $step = "eobs" ]; then
+elif [ "${step}" = "eobs" ]; then
 
     export MKL_NUM_THREADS=4
     export MKL_CBWR=AUTO
@@ -154,10 +154,10 @@ elif [ $step = "eobs" ]; then
     nth_max=$(($npe_node_max / $npe_node_eobs))
 
     export NTHREADS_GSI=${nth_eobs:-$nth_max}
-    [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
+    [[ $NTHREADS_GSI -gt ${nth_max} ]] && export NTHREADS_GSI=${nth_max}
     export APRUN_GSI="$launcher"
 
-elif [ $step = "eupd" ]; then
+elif [ "${step}" = "eupd" ]; then
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -166,10 +166,34 @@ elif [ $step = "eupd" ]; then
     nth_max=$(($npe_node_max / $npe_node_eupd))
 
     export NTHREADS_ENKF=${nth_eupd:-$nth_max}
-    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    [[ $NTHREADS_ENKF -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
     export APRUN_ENKF="$launcher"
 
-elif [ $step = "fcst" ]; then
+elif [ "${step}" = "eupdfsoi" ]; then
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
+    nth_max=$((npe_node_max / npe_node_eupdfsoi))
+
+    export NTHREADS_ENKF=${nth_eupdfsoi:-$nth_max}
+    [[ $NTHREADS_ENKF -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
+    export APRUN_ENKF="$launcher"
+
+elif [ "${step}" = "efsoi" ]; then
+
+    export CFP_MP=${CFP_MP:-"YES"}
+    export USE_CFP=${USE_CFP:-"YES"}
+    export APRUNCFP="$launcher -n \$ncmd --multi-prog"
+
+    nth_max=$((npe_node_max / npe_node_efsoi))
+
+    export NTHREADS_ENKF=${nth_efsoi:-$nth_max}
+    [[ $NTHREADS_ENKF -gt ${nth_max} ]] && export NTHREADS_ENKF=${nth_max}
+    export APRUN_ENKF="$launcher"
+
+elif [ "${step}" = "fcst" ]; then
 
     #PEs and PEs/node can differ for GFS and GDAS forecasts if threading differs
     if [[ $CDUMP == "gfs" ]]; then
@@ -181,50 +205,64 @@ elif [ $step = "fcst" ]; then
     nth_max=$(($npe_node_max / $npe_node_fcst))
 
     export NTHREADS_FV3=${nth_fv3:-$nth_max}
-    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    [[ $NTHREADS_FV3 -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=$npe_node_max
     export APRUN_FV3="$launcher -n $npe_fcst"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
-    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
+    [[ $NTHREADS_REGRID_NEMSIO -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="$launcher"
 
     export NTHREADS_REMAP=${nth_remap:-2}
-    [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
+    [[ $NTHREADS_REMAP -gt ${nth_max} ]] && export NTHREADS_REMAP=${nth_max}
     export APRUN_REMAP="$launcher"
     export I_MPI_DAPL_UD="enable"
 
-elif [ $step = "efcs" ]; then
+elif [ "${step}" = "efcs" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_efcs))
 
-    export NTHREADS_FV3=${nth_efcs:-$nth_max}
-    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    export NTHREADS_FV3=${nth_efcs:-${nth_max}}
+    [[ $NTHREADS_FV3 -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
     export cores_per_node=$npe_node_max
     export APRUN_FV3="$launcher -n $npe_efcs"
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
-    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
+    [[ $NTHREADS_REGRID_NEMSIO -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
 
-elif [ $step = "post" ]; then
+elif [ "${step}" = "efcsfsoi" ]; then
+
+    nth_max=$((npe_node_max / npe_node_efcsfsoi))
+
+    export NTHREADS_FV3=${nth_efcsfsoi:-$nth_max}
+    [[ $NTHREADS_FV3 -gt ${nth_max} ]] && export NTHREADS_FV3=${nth_max}
+    export cores_per_node=$npe_node_max
+    export APRUN_FV3="$launcher -n $npe_efcsfsoi"
+
+    export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
+    [[ $NTHREADS_REGRID_NEMSIO -gt ${nth_max} ]] && export NTHREADS_REGRID_NEMSIO=${nth_max}
+    export APRUN_REGRID_NEMSIO="$launcher $LEVS"
+
+
+elif [ "${step}" = "post" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_post))
 
     export NTHREADS_NP=${nth_np:-1}
-    [[ $NTHREADS_NP -gt $nth_max ]] && export NTHREADS_NP=$nth_max
+    [[ $NTHREADS_NP -gt ${nth_max} ]] && export NTHREADS_NP=${nth_max}
     export APRUN_NP="$launcher"
 
     export NTHREADS_DWN=${nth_dwn:-1}
-    [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
+    [[ $NTHREADS_DWN -gt ${nth_max} ]] && export NTHREADS_DWN=${nth_max}
     export APRUN_DWN="$launcher"
 
-elif [ $step = "ecen" ]; then
+elif [ "${step}" = "ecen" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_ecen))
 
     export NTHREADS_ECEN=${nth_ecen:-$nth_max}
-    [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
+    [[ $NTHREADS_ECEN -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
     export APRUN_ECEN="$launcher"
 
     export NTHREADS_CHGRES=${nth_chgres:-12}
@@ -232,58 +270,94 @@ elif [ $step = "ecen" ]; then
     export APRUN_CHGRES="time"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
-    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
+    [[ $NTHREADS_CALCINC -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
     export APRUN_CALCINC="$launcher"
 
-elif [ $step = "esfc" ]; then
+elif [ "${step}" = "ecenfsoi" ]; then
+
+    nth_max=$((npe_node_max / npe_node_ecenfsoi))
+
+    export NTHREADS_ECEN=${nth_ecenfsoi:-$nth_max}
+    [[ $NTHREADS_ECEN -gt ${nth_max} ]] && export NTHREADS_ECEN=${nth_max}
+    export APRUN_ECEN="$launcher"
+
+    export NTHREADS_CHGRES=${nth_chgres:-12}
+    [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
+    export APRUN_CHGRES="time"
+
+    export NTHREADS_CALCINC=${nth_calcinc:-1}
+    [[ $NTHREADS_CALCINC -gt ${nth_max} ]] && export NTHREADS_CALCINC=${nth_max}
+    export APRUN_CALCINC="$launcher"
+
+elif [ "${step}" = "esfc" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_esfc))
 
     export NTHREADS_ESFC=${nth_esfc:-$nth_max}
-    [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
+    [[ $NTHREADS_ESFC -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
     export APRUN_ESFC="$launcher -n $npe_esfc"
 
     export NTHREADS_CYCLE=${nth_cycle:-14}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     export APRUN_CYCLE="$launcher -n $npe_esfc"
 
-elif [ $step = "epos" ]; then
+elif [ ${step} = "esfcfsoi" ]; then
+
+    nth_max=$((npe_node_max / npe_node_esfcfsoi))
+
+    export NTHREADS_ESFC=${nth_esfcfsoi:-${nth_max}}
+    [[ ${NTHREADS_ESFC} -gt ${nth_max} ]] && export NTHREADS_ESFC=${nth_max}
+    export APRUN_ESFC="${launcher} -n ${npe_esfcfsoi}"
+
+    export NTHREADS_CYCLE=${nth_cycle:-14}
+    [[ ${NTHREADS_CYCLE} -gt ${npe_node_max} ]] && export NTHREADS_CYCLE=${npe_node_max}
+    export APRUN_CYCLE="${launcher} -n ${npe_esfcfsoi}"
+
+elif [ "${step}" = "epos" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_epos))
 
-    export NTHREADS_EPOS=${nth_epos:-$nth_max}
-    [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
+    export NTHREADS_EPOS=${nth_epos:-${nth_max}}
+    [[ $NTHREADS_EPOS -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
     export APRUN_EPOS="$launcher"
 
-elif [ $step = "init" ]; then
+elif [ "${step}" = "eposfsoi" ]; then
+
+    nth_max=$((npe_node_max / npe_node_eposfsoi))
+
+    export NTHREADS_EPOS=${nth_eposfsoi:-${nth_max}}
+    [[ ${NTHREADS_EPOS} -gt ${nth_max} ]] && export NTHREADS_EPOS=${nth_max}
+    export APRUN_EPOS="${launcher}"
+
+elif [ "${step}" = "init" ]; then
 
     export APRUN="$launcher"
 
-elif [ $step = "postsnd" ]; then
+elif [ "${step}" = "postsnd" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_postsnd))
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
-    [[ $NTHREADS_POSTSND -gt $nth_max ]] && export NTHREADS_POSTSND=$nth_max
+    [[ $NTHREADS_POSTSND -gt ${nth_max} ]] && export NTHREADS_POSTSND=${nth_max}
     export APRUN_POSTSND="$launcher"
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
-    [[ $NTHREADS_POSTSNDCFP -gt $nth_max ]] && export NTHREADS_POSTSNDCFP=$nth_max
+    [[ ${NTHREADS_POSTSNDCFP} -gt ${nth_max} ]] && export NTHREADS_POSTSNDCFP=${nth_max}
     export APRUN_POSTSNDCFP="$launcher"
 
-elif [ $step = "awips" ]; then
+elif [ "${step}" = "awips" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_awips))
 
     export NTHREADS_AWIPS=${nth_awips:-2}
-    [[ $NTHREADS_AWIPS -gt $nth_max ]] && export NTHREADS_AWIPS=$nth_max
+    [[ $NTHREADS_AWIPS -gt ${nth_max} ]] && export NTHREADS_AWIPS=${nth_max}
     export APRUN_AWIPSCFP="$launcher -n $npe_awips --multi-prog"
 
-elif [ $step = "gempak" ]; then
+elif [ "${step}" = "gempak" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_gempak))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
-    [[ $NTHREADS_GEMPAK -gt $nth_max ]] && export NTHREADS_GEMPAK=$nth_max
+    [[ $NTHREADS_GEMPAK -gt ${nth_max} ]] && export NTHREADS_GEMPAK=${nth_max}
     export APRUN="$launcher -n $npe_gempak --multi-prog"
 fi
