--- a/workflow/hosts/wcoss2.yaml
+++ b/workflow/hosts/wcoss2.yaml
@@ -12,9 +12,12 @@ scheduler: pbspro
 queue: 'dev'
 queue_service: 'dev_transfer'
 partition_batch: ''
+partition_service: 'dev_transfer'
 chgrp_rstprod: 'YES'
 chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'YES'
 localarch: 'NO'
 atardir: '/NCEPDEV/$HPSS_PROJECT/1year/$USER/$machine/scratch/$PSLOT'
+make_nsstbufr: 'YES'
+make_acftbufr: 'YES'
 supported_resolutions: ['C768', 'C384', 'C192', 'C96', 'C48']
