--- a/workflow/hosts/wcoss2.yaml
+++ b/workflow/hosts/wcoss2.yaml
@@ -12,6 +12,7 @@ scheduler: pbspro
 queue: 'dev'
 queue_service: 'dev_transfer'
 partition_batch: ''
+partition_service: ''
 chgrp_rstprod: 'YES'
 chgrp_cmd: 'chgrp rstprod'
 hpssarch: 'YES'
