Update ignore to include gfs-utils scripts
The git ignore file was never updated to ignore the gfs-utils scripts
being linked into the ush directory.

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ ush/ufsda
 ush/wafs_blending.sh
 ush/wafs_grib2.regrid.sh
 ush/wafs_intdsk.sh
+ush/finddate.sh
+ush/make_NTC_file.pl
+ush/make_ntc_bull.pl
+ush/make_tif.sh
+ush/month_name.sh
