Update launcher command for task #s in HERA.env
- Some launcher commands were missing the "-n $npe" flag.
- Add "-n" and task # variable in launcher commands if missing.

Refs #1060

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -100,11 +100,11 @@ elif [ $step = "anal" -o $step = "analcalc" ]; then
 
     export NTHREADS_GSI=${nth_anal:-$nth_max}
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
-    export APRUN_GSI="$launcher"
+    export APRUN_GSI="$launcher -n ${npe_gsi:-$npe_anal}"
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
-    export APRUN_CALCINC="$launcher"
+    export APRUN_CALCINC="$launcher \$ncmd"
 
     export NTHREADS_CYCLE=${nth_cycle:-12}
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
@@ -154,7 +154,7 @@ elif [ $step = "eobs" ]; then
 
     export NTHREADS_GSI=${nth_eobs:-$nth_max}
     [[ $NTHREADS_GSI -gt $nth_max ]] && export NTHREADS_GSI=$nth_max
-    export APRUN_GSI="$launcher"
+    export APRUN_GSI="$launcher -n ${npe_gsi:-$npe_eobs}"
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -166,7 +166,7 @@ elif [ $step = "eupd" ]; then
 
     export NTHREADS_ENKF=${nth_eupd:-$nth_max}
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
-    export APRUN_ENKF="$launcher"
+    export APRUN_ENKF="$launcher -n ${npe_enkf:-$npe_eupd}"
 
     export CFP_MP=${CFP_MP:-"YES"}
     export USE_CFP=${USE_CFP:-"YES"}
@@ -190,11 +190,11 @@ elif [ $step = "fcst" ]; then
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
-    export APRUN_REGRID_NEMSIO="$launcher"
+    export APRUN_REGRID_NEMSIO="$launcher -n ${LEVS}"
 
     export NTHREADS_REMAP=${nth_remap:-2}
     [[ $NTHREADS_REMAP -gt $nth_max ]] && export NTHREADS_REMAP=$nth_max
-    export APRUN_REMAP="$launcher"
+    export APRUN_REMAP="$launcher -n ${npe_remap:-$npe_fcst}"
     export I_MPI_DAPL_UD="enable"
 
 elif [ $step = "efcs" ]; then
@@ -208,7 +208,7 @@ elif [ $step = "efcs" ]; then
 
     export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
-    export APRUN_REGRID_NEMSIO="$launcher $LEVS"
+    export APRUN_REGRID_NEMSIO="$launcher -n ${LEVS}"
 
 elif [ $step = "post" ]; then
 
@@ -216,11 +216,11 @@ elif [ $step = "post" ]; then
 
     export NTHREADS_NP=${nth_np:-1}
     [[ $NTHREADS_NP -gt $nth_max ]] && export NTHREADS_NP=$nth_max
-    export APRUN_NP="$launcher"
+    export APRUN_NP="$launcher -n ${npe_post}"
 
     export NTHREADS_DWN=${nth_dwn:-1}
     [[ $NTHREADS_DWN -gt $nth_max ]] && export NTHREADS_DWN=$nth_max
-    export APRUN_DWN="$launcher"
+    export APRUN_DWN="$launcher -n ${npe_dwn}"
 
 elif [ $step = "ecen" ]; then
 
@@ -228,7 +228,7 @@ elif [ $step = "ecen" ]; then
 
     export NTHREADS_ECEN=${nth_ecen:-$nth_max}
     [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
-    export APRUN_ECEN="$launcher"
+    export APRUN_ECEN="$launcher -n ${npe_ecen}"
 
     export NTHREADS_CHGRES=${nth_chgres:-12}
     [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
@@ -236,7 +236,7 @@ elif [ $step = "ecen" ]; then
 
     export NTHREADS_CALCINC=${nth_calcinc:-1}
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
-    export APRUN_CALCINC="$launcher"
+    export APRUN_CALCINC="$launcher -n ${npe_ecen}"
 
 elif [ $step = "esfc" ]; then
 
@@ -256,11 +256,11 @@ elif [ $step = "epos" ]; then
 
     export NTHREADS_EPOS=${nth_epos:-$nth_max}
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
-    export APRUN_EPOS="$launcher"
+    export APRUN_EPOS="$launcher -n $npe_epos"
 
 elif [ $step = "init" ]; then
 
-    export APRUN="$launcher"
+    export APRUN="$launcher -n ${npe_init}"
 
 elif [ $step = "postsnd" ]; then
 
@@ -268,11 +268,11 @@ elif [ $step = "postsnd" ]; then
 
     export NTHREADS_POSTSND=${nth_postsnd:-1}
     [[ $NTHREADS_POSTSND -gt $nth_max ]] && export NTHREADS_POSTSND=$nth_max
-    export APRUN_POSTSND="$launcher"
+    export APRUN_POSTSND="$launcher -n ${npe_postsnd}"
 
     export NTHREADS_POSTSNDCFP=${nth_postsndcfp:-1}
     [[ $NTHREADS_POSTSNDCFP -gt $nth_max ]] && export NTHREADS_POSTSNDCFP=$nth_max
-    export APRUN_POSTSNDCFP="$launcher"
+    export APRUN_POSTSNDCFP="$launcher -n ${npe_postsnd} ${mpmd_opt}"
 
 elif [ $step = "awips" ]; then
 
