Address SC2250 linter warnings in R&D env files
Refs #1060

--- a/env/ORION.env
+++ b/env/ORION.env
@@ -281,9 +281,9 @@ elif [ $step = "awips" ]; then
 
 elif [ $step = "gempak" ]; then
 
-    nth_max=$(($npe_node_max / $npe_node_gempak))
+    nth_max=$(($npe_node_max / ${npe_node_gempak}))
 
     export NTHREADS_GEMPAK=${nth_gempak:-1}
-    [[ $NTHREADS_GEMPAK -gt $nth_max ]] && export NTHREADS_GEMPAK=$nth_max
-    export APRUN="$launcher -n $npe_gempak ${mpmd_opt}"
+    [[ ${NTHREADS_GEMPAK} -gt ${nth_max} ]] && export NTHREADS_GEMPAK=${nth_max}
+    export APRUN="${launcher} -n ${npe_gempak} ${mpmd_opt}"
 fi
